# dropply

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  index.html  make_transparent.cjs  package-lock.json  package.json
.github/workflows/: release-desktop-windows.yml
docs/: AUTH_AND_IDENTITY.md  CODE_SIGNING.md  GITHUB_PUBLICATION.md  OPEN_CORE.md  PLANS_AND_LIMITS.md  PLATFORM_ARCHITECTURE.md  PRIVACY_POLICY.md  PRODUCTION_READY.md  RELEASE.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  TERMS_OF_SERVICE.md
relay-server/: Cargo.toml  Dockerfile
relay-server/src/: main.rs
scripts/: build-release.cmd  generate-checksums.ps1  prepare-public-repo.ps1  run-dropply-dev.cmd  start-release.cmd
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/src/storage/: blobs.rs  db.rs  import.rs  mod.rs
src-tauri/src/sync/: log.rs  manager.rs  mod.rs  relay.rs  webrtc.rs
src/components/: AuthModal.tsx  Canvas.tsx  ItemCard.tsx  PairingStrip.tsx
src/hooks/: useDropply.ts
src/lib/: api.ts  cloud.ts  relay.ts  types.ts
src/styles/: app.css
