[package]
name = "dropply"
version = "1.0.0"
description = "Dropply desktop shell"
authors = ["OpenAI"]
edition = "2021"

[lib]
name = "dropply_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
anyhow = "1.0.93"
arboard = "3.4.1"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
futures-util = "0.3.31"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
tauri = { version = "2.0.6", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0.4"
tauri-plugin-fs = "2.0.4"
tokio = { version = "1.41.1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
webbrowser = "1.0.3"
